--- a/src/plugin/manifest.json
+++ b/src/plugin/manifest.json
@@ -7,7 +7,8 @@
 
   "permissions": [
     "webNavigation",
-    "http://127.0.0.1/"
+    "http://127.0.0.1/",
+    "tabs"
   ],
   "browser_action": {
     "default_icon": "icon.png",
