--- a/src/plugin/manifest.json
+++ b/src/plugin/manifest.json
@@ -8,7 +8,8 @@
   "permissions": [
     "webNavigation",
     "http://127.0.0.1/",
-    "tabs"
+    "tabs",
+    "https://www.google.com/"
   ],
   "browser_action": {
     "default_icon": "icon.png",
