--- a/src/plugin/manifest.json
+++ b/src/plugin/manifest.json
@@ -24,7 +24,11 @@
   },
   
   "content_scripts": [
-  {
+{
+        "matches": ["http://europeana.eu/*", "https://europeana.eu/*"],
+        "js": ["js/libs/jquery-1.9.0/jquery.min.js", "js/jsonToRDF.js"]
+  },  
+	{
 	"matches": ["http://*/*","https://*/*"],
 	"js": ["js/libs/microdatajs/lib/jquery-1.4.4.min.js","js/libs/microdatajs/jquery.microdata.js","js/libs/microdatajs/jquery.microdata.rdf.js","js/microdataToRDF.js"]
   }
