--- a/src/plugin/manifest.json
+++ b/src/plugin/manifest.json
@@ -1,35 +1,32 @@
 {
-  "manifest_version": 2,
-
-  "name": "SemanticBrowser",
-  "description": "Surfing the Web of Data",
-  "version": "0.1",
-
-  "permissions": [
-    "webNavigation",
-    "http://127.0.0.1/",
-	"http://*/",
-    "tabs",
-    "https://www.google.com/"
-  ],
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-          
-   "background": {
-    "scripts": ["js/libs/jquery-1.9.0/jquery.min.js","eventPage.js"],
-    "persistent": false
-  },
-  
-  "content_scripts": [
-{
-        "matches": ["http://europeana.eu/*", "https://europeana.eu/*"],
-        "js": ["js/libs/jquery-1.9.0/jquery.min.js", "js/jsonToRDF.js"]
-  },  
-	{
-	"matches": ["http://*/*","https://*/*"],
-	"js": ["js/libs/microdatajs/lib/jquery-1.4.4.min.js","js/libs/microdatajs/jquery.microdata.js","js/libs/microdatajs/jquery.microdata.rdf.js","js/microdataToRDF.js"]
-  }
-  ]
+    "manifest_version": 2,
+    "name": "SemanticBrowser",
+    "description": "Surfing the Web of Data",
+    "version": "0.1",
+    "permissions": [
+        "webNavigation",
+        "http://127.0.0.1/",
+        "http://*/",
+        "tabs",
+        "https://www.google.com/"
+    ],
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+    "background": {
+        "scripts": ["js/libs/jquery-1.9.0/jquery.min.js", "eventPage.js"],
+        "persistent": false
+    },
+            "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://mts0.googleapis.com https://mts1.googleapis.com https://maps.googleapis.com https://maps.gstatic.com; object-src 'self' ",
+    "content_scripts": [
+        {
+            "matches": ["http://europeana.eu/*", "https://europeana.eu/*"],
+            "js": ["js/libs/jquery-1.9.0/jquery.min.js", "js/jsonToRDF.js"]
+        },
+        {
+            "matches": ["http://*/*", "https://*/*"],
+            "js": ["js/libs/microdatajs/lib/jquery-1.4.4.min.js", "js/libs/microdatajs/jquery.microdata.js", "js/libs/microdatajs/jquery.microdata.rdf.js", "js/microdataToRDF.js"]
+        }
+    ]
 }
